--- a/3-column-preview-card-component-main/index.html
+++ b/3-column-preview-card-component-main/index.html
@@ -23,17 +23,17 @@
   <div class="container">
     <div class="car-1"><img src="./images/icon-sedans.svg" alt="sedan car"><span class="car-type">Sedans</span><p class="desc"> Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
       or on your next road trip.</p>
-      <button class="click">Learn More</button>
+      <button class="click c-1">Learn More</button>
     </div>
-    <div class="car-2"><img src="./images/icon-suvs.svg" alt="suv car" srcset=""><span class="car-type">SUVs</span><p class="desc">
+    <div class="car-2"><img src="./images/icon-suvs.svg" alt="suv car" srcset=""><span class="car-type">SUVs</span><p class="desc-">
       Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
       and off-road adventures.</p>
-      <button class="click">Learn More</button>
+      <button class="click c-2">Learn More</button>
     </div>
     <div class="car-3"><img src="./images/icon-luxury.svg" alt="luxary car" srcset=""><span class="car-type"> Luxury</span><p class="desc"> 
       Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
       rental and arrive in style.</p>
-      <button class="click">Learn More</button>  
+      <button class="click c-3">Learn More</button>  
     </div>
   </div>
   <div class="attribution">
